--- a/MutiModule-service/pom.xml
+++ b/MutiModule-service/pom.xml
@@ -10,21 +10,24 @@
 	</parent>
 	
 	<groupId>com.alexgaoyh</groupId>
-	<artifactId>MutiModule-captcha</artifactId>
+	<artifactId>MutiModule-service</artifactId>
 	<version>0.0.1-RELEASE</version>
-	<name>MutiModule-captcha</name>
+	<name>MutiModule-service</name>
 	<url>http://maven.apache.org</url>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
-	<!-- Nexus 私服配置  从私服中下载jar-->
+	<!-- Nexus 私服配置 -->
 	<repositories>
 		<repository>
 			<id>nexus</id>
 			<name>Nexus</name>
+			<!-- public  -->
 			<url>http://localhost:8081/nexus/content/groups/public/</url>
+			<!-- snapshots
+			<url>http://localhost:8081/nexus/content/repositories/snapshots/</url> -->
 			<releases><enabled>true</enabled></releases>
 			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
@@ -33,27 +36,21 @@
 		<pluginRepository>
 			<id>nexus</id>
 			<name>Nexus</name>
+			<!-- public  -->
 			<url>http://localhost:8081/nexus/content/groups/public/</url>
+			<!-- snapshots
+			<url>http://localhost:8081/nexus/content/repositories/snapshots/</url> -->
 			<releases><enabled>true</enabled></releases>
 			<snapshots><enabled>true</enabled></snapshots>
 		</pluginRepository>
 	</pluginRepositories>
 	
 	<dependencies>
+		<!-- MutiModule-service项目相当于facade设计模式，这里需要将MutiModule-captcha项目进行mvn install之后生成的jar导入到这个项目里面 -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>4.0.2.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>4.0.2.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>4.0.2.RELEASE</version>
+			<groupId>com.alexgaoyh</groupId>
+			<artifactId>MutiModule-captcha</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -62,19 +59,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
-	<!-- 使用maven 部署构件至Nexus -->
-	<distributionManagement>  
-        <repository>  
-            <id>releases</id>  
-            <name>Local Nexus Repository</name>  
-            <url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>  
-        </repository>  
-        <snapshotRepository>
-            <id>snapshots</id>  
-            <name>Local Nexus Repository</name>  
-            <url>http://127.0.0.1:8081/nexus/content/repositories/snapshots</url>  
-        </snapshotRepository>  
-    </distributionManagement>
-    
 </project>
