--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,64 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.alexgaoyh</groupId>
   <artifactId>MutiModule-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-RELEASE</version>
   <packaging>pom</packaging>
 
   <name>MutiModule-parent</name>
   <url>http://maven.apache.org</url>
+  
+  <!-- Nexus 私服配置 -->
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<name>Nexus</name>
+			<url>http://localhost:8081/nexus/content/groups/public/</url>
+			<releases><enabled>true</enabled></releases>
+			<snapshots><enabled>true</enabled></snapshots>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>nexus</id>
+			<name>Nexus</name>
+			<url>http://localhost:8081/nexus/content/groups/public/</url>
+			<releases><enabled>true</enabled></releases>
+			<snapshots><enabled>true</enabled></snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.7</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+  
+	<!-- 使用maven 部署构件至Nexus -->
+	<distributionManagement>  
+        <repository>  
+            <id>releases</id>  
+            <name>Local Nexus Repository</name>  
+            <url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>  
+        </repository>  
+        <snapshotRepository>
+            <id>snapshots</id>  
+            <name>Local Nexus Repository</name>  
+            <url>http://127.0.0.1:8081/nexus/content/repositories/snapshots</url>  
+        </snapshotRepository>  
+    </distributionManagement>
+    
   <modules>
   	<module>MutiModule-captcha</module>
+    <module>MutiModule-service</module>
   </modules>
 </project>
