service persist 部分代码提交

--- a/MutiModule-service/pom.xml
+++ b/MutiModule-service/pom.xml
@@ -51,10 +51,51 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.alexgaoyh</groupId>
+			<artifactId>MutiModule-domain</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<!-- 持久化 -->
+		<dependency>
+			<groupId>com.alexgaoyh</groupId>
+			<artifactId>MutiModule-persist</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.7</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	
