--- a/MutiModule-service/pom.xml
+++ b/MutiModule-service/pom.xml
@@ -86,6 +86,10 @@
 			<artifactId>mybatis-spring</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.mchange</groupId>
 			<artifactId>c3p0</artifactId>
 		</dependency>
