--- a/MutiModule-persist/pom.xml
+++ b/MutiModule-persist/pom.xml
@@ -19,11 +19,6 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>com.alexgaoyh</groupId>
-			<artifactId>MutiModule-domain</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 		</dependency>
@@ -60,4 +55,27 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-maven-plugin</artifactId>
+            <version>1.3.2</version>
+            <configuration>
+                <verbose>true</verbose>
+                <overwrite>true</overwrite>
+            </configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+				    <verbose>true</verbose>
+				    <overwrite>true</overwrite>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
