--- a/MutiModule-web/pom.xml
+++ b/MutiModule-web/pom.xml
@@ -86,6 +86,10 @@
 	        <groupId>org.springframework</groupId>  
 	        <artifactId>spring-core</artifactId>  
 	    </dependency>
+	    <dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
