--- a/MutiModule-service/pom.xml
+++ b/MutiModule-service/pom.xml
@@ -50,11 +50,6 @@
 			<artifactId>MutiModule-captcha</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>com.alexgaoyh</groupId>
-			<artifactId>MutiModule-domain</artifactId>
-			<version>${project.version}</version>
-		</dependency>
 		<!-- 持久化 -->
 		<dependency>
 			<groupId>com.alexgaoyh</groupId>
@@ -77,6 +72,14 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-jdbc</artifactId>
 		</dependency>
+		<dependency>  
+	        <groupId>org.springframework.data</groupId>  
+	        <artifactId>spring-data-redis</artifactId>  
+	    </dependency>
+	    <dependency>  
+	        <groupId>redis.clients</groupId>  
+	        <artifactId>jedis</artifactId>  
+	    </dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -100,6 +103,14 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
