--- a/MutiModule-web/pom.xml
+++ b/MutiModule-web/pom.xml
@@ -90,6 +90,10 @@
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
