--- a/MutiModule-web/src/main/webapp/WEB-INF/web.xml
+++ b/MutiModule-web/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,16 @@
 		<url-pattern>/servlet/captchaCode</url-pattern>
 	</servlet-mapping>
 	
+	<!-- 配置登陆过滤器 -->
+	<filter>
+        <filter-name>login</filter-name>
+        <filter-class>com.alexgaoyh.MutiModule.web.admin.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>login</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+	</filter-mapping>
+	
 	<!-- session超时定义,单位为分钟 -->  
     <session-config>  
         <session-timeout>30</session-timeout>  
