--- a/MutiModule-web/pom.xml
+++ b/MutiModule-web/pom.xml
@@ -94,6 +94,10 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
+		<dependency>  
+	      <groupId>commons-lang</groupId>  
+	      <artifactId>commons-lang</artifactId>  
+	    </dependency>
 	</dependencies>
 	
 	<build>
