--- a/MutiModule-ueditor/pom.xml
+++ b/MutiModule-ueditor/pom.xml
@@ -32,5 +32,15 @@
 	</dependencies>
 	<build>
 		<finalName>MutiModule-ueditor</finalName>
+		<plugins>
+    		<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+    		</plugin>
+    		<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-resources-plugin</artifactId>
+    		</plugin>
+    	</plugins>
 	</build>
 </project>
