--- a/MutiModule-web/pom.xml
+++ b/MutiModule-web/pom.xml
@@ -47,6 +47,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.alexgaoyh</groupId>
+			<artifactId>MutiModule-logback</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
