--- a/MutiModule-web/src/main/webapp/WEB-INF/web.xml
+++ b/MutiModule-web/src/main/webapp/WEB-INF/web.xml
@@ -64,5 +64,10 @@
 		<error-code>404</error-code>  
 		<location>/404.jsp</location>
 	</error-page> 
+	
+	<error-page>  
+		<error-code>500</error-code>  
+		<location>/500.jsp</location>
+	</error-page> 
 
 </web-app>
