MutiModule-web层，去除session机制，改为cookie保存用户信息

--- a/MutiModule-web/pom.xml
+++ b/MutiModule-web/pom.xml
@@ -43,6 +43,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.alexgaoyh</groupId>
+			<artifactId>MutiModule-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alexgaoyh</groupId>
 			<artifactId>MutiModule-service</artifactId>
 			<version>${project.version}</version>
 		</dependency>
