删除MutiModule-kindeditorClass，类文件迁移到MutiModule-common

--- a/MutiModule-kindeditorDemo/pom.xml
+++ b/MutiModule-kindeditorDemo/pom.xml
@@ -17,7 +17,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.alexgaoyh</groupId>
-			<artifactId>MutiModule-kindeditorClass</artifactId>
+			<artifactId>MutiModule-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>  
