--- a/MutiModule-kindeditorDemo/src/main/webapp/WEB-INF/web.xml
+++ b/MutiModule-kindeditorDemo/src/main/webapp/WEB-INF/web.xml
@@ -7,18 +7,18 @@
   <display-name>Archetype Created Web Application</display-name>
   
   	<servlet>
-		<servlet-name>uploadServlet</servlet-name>
-		<servlet-class>com.MutiModule.kindeditorClass.servlet.UploadServlet</servlet-class>
+		<servlet-name>fileUploadServlet</servlet-name>
+		<servlet-class>com.MutiModule.common.kindeditor.servlet.FileUploadServlet</servlet-class>
 		<load-on-startup>10</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>uploadServlet</servlet-name>
-		<url-pattern>/upload</url-pattern>
+		<servlet-name>fileUploadServlet</servlet-name>
+		<url-pattern>/fileUpload</url-pattern>
 	</servlet-mapping>
 	
 	<servlet>
 		<servlet-name>fileManagerServlet</servlet-name>
-		<servlet-class>com.MutiModule.kindeditorClass.servlet.FileManagerServlet</servlet-class>
+		<servlet-class>com.MutiModule.common.kindeditor.servlet.FileManagerServlet</servlet-class>
 		<load-on-startup>10</load-on-startup>
 	</servlet>
 	<servlet-mapping>
@@ -26,13 +26,4 @@
 		<url-pattern>/fileManager</url-pattern>
 	</servlet-mapping>
 	
-	<servlet>
-		<servlet-name>myUploadServlet</servlet-name>
-		<servlet-class>com.MutiModule.kindeditorClass.servlet.FileManagerServlet</servlet-class>
-		<load-on-startup>10</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>myUploadServlet</servlet-name>
-		<url-pattern>/myUpload</url-pattern>
-	</servlet-mapping>
 </web-app>
