--- a/MutiModule-common/pom.xml
+++ b/MutiModule-common/pom.xml
@@ -51,5 +51,9 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>org.im4java</groupId>
+		  <artifactId>im4java</artifactId>
+		</dependency>
 	</dependencies>
 </project>
