ImgServlet移动至common模块，保证kindeditorDemo只是纯demo，不包含重点的业务、

--- a/MutiModule-kindeditorDemo/src/main/webapp/WEB-INF/web.xml
+++ b/MutiModule-kindeditorDemo/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 	
 	<servlet>
 		<servlet-name>imgServlet</servlet-name>
-		<servlet-class>com.MutiModule.kindeditorDemo.servlet.ImgServlet</servlet-class>
+		<servlet-class>com.MutiModule.common.servlet.image.ImgServlet</servlet-class>
 		<load-on-startup>10</load-on-startup>
 	</servlet>
 	<servlet-mapping>
