--- a/MutiModule-common/pom.xml
+++ b/MutiModule-common/pom.xml
@@ -55,5 +55,9 @@
 		  <groupId>org.im4java</groupId>
 		  <artifactId>im4java</artifactId>
 		</dependency>
+		<dependency>
+	    	<groupId>org.mybatis.generator</groupId>
+	    	<artifactId>mybatis-generator-core</artifactId>
+		 </dependency>
 	</dependencies>
 </project>
