增加生成xml字符串的方法，详见common模块的单元测试方法：GenerateXMLTest

--- a/MutiModule-common/pom.xml
+++ b/MutiModule-common/pom.xml
@@ -63,5 +63,13 @@
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+		</dependency>
 	</dependencies>
 </project>
